# libsonatareport

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  setup.py
.github/workflows/: clang_format_check.yaml  coverage_test.yaml  run_python_test.yaml  run_test.yaml  simulation_test.yaml
ci/: coverage_test.sh
converter/: CMakeLists.txt  reports_converter.cpp  spikes_converter.cpp
converter/binary_reader/: BinaryPositions.h  CMakeLists.txt  ReadManager.cpp  crossPlatformConversion.h
extlib/: CMakeLists.txt
include/bbp/sonata/: report_reader.h  reports.h
python/: CMakeLists.txt  bindings.cpp
python/libsonatareport/: __init__.py
python/tests/: test.py
src/: CMakeLists.txt
src/data/: node.cpp  node.h  soma_node.cpp  soma_node.h  sonata_data.cpp  sonata_data.h
src/io/: h5typemap.hpp  hdf5_writer.cpp  hdf5_writer.h
src/utils/: imeutil.cpp  imeutil.h  logger.cpp  logger.h
tests/: CMakeLists.txt
tests/converter/: CMakeLists.txt  converter_test.sh.in  soma.ref.h5  spikes.ref  spikes.ref.h5
tests/integration/: CMakeLists.txt  compartment_report.ref  compartment_report_serial.ref  integration_test.cpp  integration_test.sh.in  single_report.ref  soma_report.ref  soma_report_serial.ref  spikes.ref  spikes_serial.ref
tests/unit/: CMakeLists.txt  test_node.cpp  test_report.cpp  test_report_reader.cpp  test_sonatadata.cpp  test_sonatareport.cpp  tests.cpp
tools/converter/: CMakeLists.txt  reports_converter.cpp  spikes_converter.cpp
tools/converter/binary_reader/: CMakeLists.txt  ReadManager.cpp  ReadManager.h  binary_positions.h  binary_reader.cpp  binary_reader.h  crossPlatformConversion.h  cross_platform_conversion.h
